--- a/index.html
+++ b/index.html
@@ -83,6 +83,15 @@
         </div>
 
         <div class="mt-5">
+            <h3 class="text-center">Available YouTube Movies</h3>
+            <ul class="list-group mb-4">
+                <li class="list-group-item">The Matrix (1999)</li>
+                <li class="list-group-item">Inception (2010)</li>
+                <li class="list-group-item">The Dark Knight (2008)</li>
+                <li class="list-group-item">Interstellar (2014)</li>
+                <li class="list-group-item">Parasite (2019)</li>
+            </ul>
+
             <h3 class="text-center">Manage Your Downloads</h3>
 
             <!-- CRUD Table -->
